--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
     
 </head>
 <body>
+
     
 <main class="container-fluid text-center bg-black bg-md-black text-light">
 <div class="row align-items-center justify-content-center " style="height: 100vh;">
@@ -39,6 +40,9 @@
         <div class="col-4">
             <h3 onclick="changeColor(this,'purple')">Cambia mi color a morado</h3>
         </div>
+        <div class="col-4">
+            <h3 onclick="eligeColor(this,'black')"> Coloréame :D </h3>
+        </div>
     </div>
 </footer>
 
@@ -51,5 +55,3 @@
 </body>
 </html>
 
-
-<!-- Hacer un div que te pregunte el color y cambie el texto a ese color -->
