--- a/index.html
+++ b/index.html
@@ -4,10 +4,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<!-- Estilos bootstrap -->
+    <!-- Estilos bootstrap -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-4bw+/aepP/YC94hEpVNVgiZdgIC5+VKNBQNGCHeKRQN+PtmoHDEXuppvnDJzQIu9" crossorigin="anonymous">
-<!-- Estilos personalisados -->
+    <!-- Estilos personalisados -->
     <link rel="stylesheet" href="/style.css">
 
     <title>Página en construcción</title>
@@ -18,9 +18,102 @@
 </head>
 
 <body>
+    <!-- navBar section -->
+
+    <header>
+
+       <nav class="navbar navbar-expand-lg navbar-dark bg-dark py-3">
+            <div class="container">
+              <a class="navbar-brand" href="#">Vatos lokos</a>
+              <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+              </button>
+              <div class="collapse navbar-collapse" id="navbarSupportedContent">
+                <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
+                  <li class="nav-item">
+                    <a class="nav-link active" aria-current="page" href="#">Home</a>
+                  </li>
+                  <li class="nav-item">
+                    <a class="nav-link" href="#">Pandillas</a>
+                  </li>
+                  <li class="nav-item dropdown">
+                    <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                      Jales
+                    </a>
+                    <ul class="dropdown-menu">
+                      <li><a class="dropdown-item" href="#">Action</a></li>
+                      <li><a class="dropdown-item" href="#">Another action</a></li>
+                      <li><hr class="dropdown-divider"></li>
+                      <li><a class="dropdown-item" href="#">Something else here</a></li>
+                    </ul>
+                  </li>
+                  <li class="nav-item">
+                    <a class="nav-link" href="#">Únete</a>
+                  </li>  
+                  <li class="nav-item">
+                    <a class="nav-link" href="#">Preguntas</a>
+                  </li> 
+                  <li class="nav-item">
+                    <a class="nav-link" href="#">Hommies</a>
+                  </li> 
+                  <li class="nav-item">
+                    <a class="nav-link" href="#">Contacto</a>
+                  </li> 
+
+                </ul>
+              </div>
+            </div>
+          </nav>
 
 
-   
+    </header>
+
+    <!-- main section -->
+
+    <main>
+
+        <!-- hero section -->
+        <section class="bg-dark text-light text-center" id="home">
+            <div class="contanier py-5">
+                <div class="row align-items-center justify-content-center py-5">
+                    <!-- principal text -->
+                    <div class="col-12 col-8">
+                        <h1>Comienza a ser un verdadero <span class="text-warning">Cholo</span></h1>
+                        <h3 class="my-4">Vatos lokos por siempre</h3>
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Placeat voluptatibus ipsum sit? Minima commodi quas nesciunt? Suscipit maxime ut at odio unde placeat! Repellendus autem nisi eius quaerat id in.
+                        Eligendi amet ullam excepturi maxime incidunt ex illo adipisci, a error aliquam cupiditate voluptate eos nostrum illum aperiam suscipit, mollitia debitis nemo? Nulla facilis ratione unde perferendis officiis! Iste, placeat.</p>
+                    </div>
+                    <!-- principal imagen -->
+                    <div class="col-12 col-md-4 mt-md-0 mt-4">
+                        <a href="https://en.wikipedia.org/wiki/Cholo_(subculture)"><img class="img-fluid rounded" src="https://upload.wikimedia.org/wikipedia/commons/thumb/e/e3/Cacos_13%2C_Cholos_Neza.jpg/1024px-Cacos_13%2C_Cholos_Neza.jpg" alt="Cholos"></a>
+                    </div>
+                </div>
+            </div>
+        </section>
+
+        <!-- newsletter section -->
+
+
+        <!-- service section -->
+
+
+        <!-- about section -->
+
+
+        <!-- learn section -->
+
+
+        <!-- faq section -->
+
+    </main>
+
+
+    <!-- footer section -->
+
+    <footer>
+
+
+    </footer>
 
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/js/bootstrap.bundle.min.js"
