--- a/index.html
+++ b/index.html
@@ -91,6 +91,39 @@
             </div>
         </section>
 
+<!-- carrusel -->
+        <section class="p-5">
+            <div class="container py-5">
+                <div class="row">
+                    <div class="col-8">
+
+                        <div id="carouselExample" class="carousel slide">
+                            <div class="carousel-inner">
+                              <div class="carousel-item active">
+                                <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/5/51/UFW_Flag.svg/1024px-UFW_Flag.svg.png" class="d-block w-100" alt="...">
+                              </div>
+                              <div class="carousel-item">
+                                <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/e/e3/Cacos_13%2C_Cholos_Neza.jpg/1024px-Cacos_13%2C_Cholos_Neza.jpg" class="d-block w-100" alt="...">
+                              </div>
+                              <div class="carousel-item">
+                                <img src="https://upload.wikimedia.org/wikipedia/commons/6/64/Eastside_Playboys_Varrior.jpg" class="d-block w-100" alt="...">
+                              </div>
+                            </div>
+                            <button class="carousel-control-prev" type="button" data-bs-target="#carouselExample" data-bs-slide="prev">
+                              <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                              <span class="visually-hidden">Previous</span>
+                            </button>
+                            <button class="carousel-control-next" type="button" data-bs-target="#carouselExample" data-bs-slide="next">
+                              <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                              <span class="visually-hidden">Next</span>
+                            </button>
+                          </div>
+                    </div>
+                </div>
+            </div>
+        </section>
+
+
         <!-- newsletter section -->
 
 
