ci:tipos de datos js

--- a/assets/pages/sesion-js/js01.html
+++ b/assets/pages/sesion-js/js01.html
@@ -21,6 +21,13 @@
                     <li>Qué son las variables</li>
                     <li>Conversión explícita</li>
                 </ul>
+                <form action="">
+                    <label for="phone">Teléfono</label>
+                    <input type="tel" pattern="[0-9+\-]">
+                </form>
+
+
+
             </div>
         </div>
     </div>
