--- a/assets/pages/sesion-js/js06.html
+++ b/assets/pages/sesion-js/js06.html
@@ -3,29 +3,33 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Sesion JS05</title>
+    <title>Sesion JS06</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-4bw+/aepP/YC94hEpVNVgiZdgIC5+VKNBQNGCHeKRQN+PtmoHDEXuppvnDJzQIu9" crossorigin="anonymous">
   </head>
   <body>
     <main class="bg-dark text-light">
         <div class="container" >
-            <div class="row justify-content-center align-items-center" style="height: 100vh;">
+            <div class="row justify-content-center align-items-center" style="height: 60vh;">
                 <div class="col-8">
-                    <h1>Sesion JS05</h1>
-                    <h3 class="text-warning">Condiciones y expresiones</h3>
+                    <h1 id="title" >Sesion x</h1>
+                    <h3 id="subtitle" class="text-warning">Manipulación del DOM</h3>
                     <ul>
-                        <li>Describir los operadores</li>
-                        <li>Usar los principales operadores</li>
-                        <li>Definir y leer expresiones</li>
-                        <li>Operador de corto circuito && y ||</li>
-                  
-                                   
+                        <li>Descripcion del DOM</li>
+                        <li>Acceder elementos HTML</li>
+                        <li>Leer y validar datos de formularios</li>
+                        <li>Ocultar y mostrar elementos HTML</li>      
                     </ul>
                 </div>
             </div>
+
+            <div class="row" style="height: 40vh;">
+            <div id="descriptionCh30" class="col-10" ></div>
+
+            </div>
+
         </div>        
     </main>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-HwwvtgBNo3bZJJLYd8oVXjrBZt8cqVSpeBNS5n7C8IVInixGAoxmnlMuBnhbgrkm" crossorigin="anonymous"></script>
-    <script src="./js05.js"></script>
+    <script src="./js06.js"></script>
   </body>
 </html>
