--- a/assets/pages/sesion-js/js06.html
+++ b/assets/pages/sesion-js/js06.html
@@ -5,6 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Sesion JS06</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-4bw+/aepP/YC94hEpVNVgiZdgIC5+VKNBQNGCHeKRQN+PtmoHDEXuppvnDJzQIu9" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css">
+
   </head>
   <body>
     <main class="bg-dark text-light">
@@ -24,6 +26,15 @@
 
             <div class="row" style="height: 40vh;">
             <div id="descriptionCh30" class="col-10" ></div>
+
+            </div>
+            <div id="buttons" class="col-6 text-center" >
+
+              <div class="btn-group" role="group" aria-label="Basic mixed styles example">
+                <button onclick="displayNoneElement" type="button" class="btn btn-danger"><i class="bi bi-eraser-fill me-3"></i>Quitar</button>
+                <button onclick="hiddenElement" type="button" class="btn btn-warning"><i class="bi bi-eye-slash-fill me-3"></i>Ocultar</button>
+                <button onclick="resetElements" type="button" class="btn btn-success"><i class="bi bi-arrow-clockwise me-3"></i>Reestablecer</button>
+              </div>
 
             </div>
 
