promises and api fetch

--- a/assets/pages/sesion-js/fecha.html
+++ b/assets/pages/sesion-js/fecha.html
@@ -19,21 +19,29 @@
          
 
 
-          <div class="input-group">
-            
-            <span class="input-group-text">año, mes , día</span>
-            <input type="text" aria-label="First name" class="form-control">
-            <input type="text" aria-label="Last name" class="form-control">
-            <input type="text" aria-label="Last name" class="form-control">
+          <form class="form-floating">
+            <input id="input-year" type="email" class="form-control" id="floatingInputValue" placeholder="1990" value="1990">
+            <label for="floatingInputValue">Año</label>
+          </form>
 
-          </div>
+          <form class="form-floating">
+            <input id="input-month" type="email" class="form-control" id="floatingInputValue" placeholder="01" value="01">
+            <label for="floatingInputValue">Mes</label>
+          </form>
+
+          <form class="form-floating">
+            <input id="input-day" type="email" class="form-control" id="floatingInputValue" placeholder="30" value="30">
+            <label for="floatingInputValue">Day</label>
+          </form>
+          <br>
 
 
 
 
-          <input id="input-year">
+
+          <!-- <input id="input-year">
           <input id="input-month">
-          <input id="input-day">
+          <input id="input-day"> -->
           <button onclick="test()" class="btn btn-outline-info">Calcular</button>
 
 
