--- a/assets/pages/sesion-js/js08.html
+++ b/assets/pages/sesion-js/js08.html
@@ -9,23 +9,60 @@
   <body>
     <main class="bg-dark text-light">
         <div class="container" >
-            <div class="row justify-content-center align-items-center" style="height: 100vh;">
-                <div class="col-8">
-                    <h1>Sesion JS08</h1>
+            <!-- descripción y formulario -->
+            <div class="row justify-content-center align-items-center my-5">
+              <!-- descripción de la sesión -->
+                <div class="col-6 d-none d-sm-block">
+                    <h1>Sesion Js 08</h1>
                     <h3 class="text-warning">Programación orientada a objetos</h3>
                     <ul>
-                        <li>POO</li>
-                        <li>Usar los principales operadores</li>
-                        <li>Definir y leer expresiones</li>
-                        <li>Operador de corto circuito && y ||</li>
-                  
-                                   
+                        <li>Explicar los principios SOLID</li>
+                        <li>Definir una clase con atributos y métodos</li>
+                        <li>Instanciar una clase</li>                                                
+                        <li>Usar el formato JSON</li>                                                
                     </ul>
                 </div>
+                <div class="col-12 col-sm-6">
+                  <!-- formulario de bootstrap -->
+                  <div id="liveAlertPlaceholder"></div>
+                  <form class="row g-3" id="registerForm">
+                    <div class="col-md-6">
+                      <label for="email" class="form-label">Email</label>
+                      <input type="email" class="form-control" id="email">
+                    </div>
+                    <div class="col-md-6">
+                      <label for="password" class="form-label">Password</label>
+                      <input type="password" class="form-control" id="password">
+                    </div>
+                    <div class="col-12">
+                      <label for="fullname" class="form-label">Full Name</label>
+                      <input type="text" class="form-control" id="fullname" placeholder="Don Ramón Valdéz">
+                    </div>
+                    <div class="col-12">
+                      <button type="submit" class="btn btn-primary">Sign in</button>
+                    </div>
+                  </form>
+                </div>
+            </div>
+            <!-- productos -->
+            <div class="row justify-content-center align-items-center my-5">
+              <div class="col-10">
+                <!-- botones -->
+                <section id="buttons" class="text-center" >
+                  <!-- <button onclick="getProducts()" class="btn btn-info">Products</button>
+                  <button onclick="onClickLifeSpan()" class="btn btn-info">Tiempo de vida</button>                   -->
+                  <button id="show-products" class="btn btn-warning">Mostrar productos</button>                  
+                </section>
+                <!-- cards de productos -->
+                <section id="products">
+
+                </section>
+              </div>
             </div>
         </div>        
     </main>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-HwwvtgBNo3bZJJLYd8oVXjrBZt8cqVSpeBNS5n7C8IVInixGAoxmnlMuBnhbgrkm" crossorigin="anonymous"></script>
     <script src="./js08.js"></script>
+    <script type="module" src="./js08-clases.js"></script>
   </body>
 </html>
