feat: API Fetch user request

--- a/assets/pages/sesion-js/js07/repaso-fetch.html
+++ b/assets/pages/sesion-js/js07/repaso-fetch.html
@@ -15,7 +15,7 @@
 <div class="d-grid gap-2 col-2 mx-auto">
   <button id="button-get-users" type="button" class="btn btn-success">Leer usuarios</button>
 </div>
-<div class="container" id="test">
+<div class="gittable-responsive" id="test">
   </div>
 
     </main>
